# N-Body

./: .gitignore  CMAKE_BUILD_GUIDE.md  CMakeLists.txt  PERFORMANCE_ANALYSIS.md  README.md  config.json  log.txt  main.cpp  run.txt
N-Body Simulation/: Body.h  Simulation.h  Vec2.h  aplikacija  benchmark-app  benchmark.cpp  config.json  log.txt  main-n-body.cpp  main.cpp  nbody  run.txt  solar_system.cpp
